@@ -21,30 +21,47 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.data.domain.*;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 
-import java.util.*;
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
+import java.util.Set;
 
-import static org.assertj.core.api.AssertionsForInterfaceTypes.assertThat;
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertSame;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class ProductServiceTest {
 
     @Mock
     private ProductRepository productRepository;
+
     @Mock
     private CategoryRepository categoryRepository;
+
     @Mock
     private SupplierRepository supplierRepository;
+
     @Mock
     private ProductMapper productMapper;
+
     @Mock
     private WarehouseRepository warehouseRepository;
+
     @Mock
     private StockRepository stockRepository;
+
     @Mock
     private ProductCache productCache;
 
@@ -56,10 +73,13 @@ class ProductServiceTest {
 
     @BeforeEach
     void setUp() {
+        productService.init();
+
         productDto = new ProductDto();
         productDto.setId(1L);
         productDto.setName("Test Product");
         productDto.setPrice(100.0);
+
         product = new Product();
         product.setId(1L);
         product.setName("Test Product");
@@ -73,178 +93,177 @@ class ProductServiceTest {
 
         List<ProductDto> result = productService.getAllProducts();
 
-        assertEquals(1, result.size());
-        assertEquals(productDto, result.get(0));
+        assertEquals(List.of(productDto), result);
     }
 
     @Test
     void getProductById_whenExists_shouldReturn() {
-        when(productRepository.findByIdWithDetails(1L)).thenReturn(Optional.of(product));
+        when(productRepository.findById(1L)).thenReturn(Optional.of(product));
         when(productMapper.toDto(product)).thenReturn(productDto);
 
         ProductDto result = productService.getProductById(1L);
 
-        assertNotNull(result);
-        assertEquals(productDto, result);
+        assertSame(productDto, result);
     }
 
     @Test
     void getProductById_whenNotExists_shouldThrow() {
-        when(productRepository.findByIdWithDetails(1L)).thenReturn(Optional.empty());
+        when(productRepository.findById(1L)).thenReturn(Optional.empty());
+
         assertThrows(ResourceNotFoundException.class, () -> productService.getProductById(1L));
     }
 
     @Test
     void getProductWithDetails_success() {
-        when(productRepository.findByIdWithDetails(1L)).thenReturn(Optional.of(product));
+        when(productRepository.findByIdWithCategory(1L)).thenReturn(Optional.of(product));
         when(productMapper.toDto(product)).thenReturn(productDto);
-        assertNotNull(productService.getProductWithDetails(1L));
-    }
 
-    @Test
-    void getProductWithDetails_notFound() {
-        when(productRepository.findByIdWithDetails(1L)).thenReturn(Optional.empty());
-        assertThrows(ResourceNotFoundException.class, () -> productService.getProductWithDetails(1L));
+        assertSame(productDto, productService.getProductWithDetails(1L));
     }
 
     @Test
     void getAllProductsWithDetails_shouldReturnList() {
-        when(productRepository.findAllWithStocksAndCategory()).thenReturn(List.of(product));
+        when(productRepository.findAllWithDetails()).thenReturn(List.of(product));
         when(productMapper.toDto(product)).thenReturn(productDto);
+
         assertEquals(1, productService.getAllProductsWithDetails().size());
     }
 
     @Test
-    void createProduct_success() {
+    void createProduct_withExistingCategoryAndSuppliers_setsRelationsAndClearsCache() {
         ProductDto input = new ProductDto();
-        input.setName("New");
-        input.setPrice(50.0);
+        input.setName("Product with relations");
+        input.setPrice(200.0);
+        input.setCategoryId(1L);
+        input.setSupplierIds(Set.of(2L));
+
         Product entity = new Product();
-        Product saved = new Product();
-        saved.setId(2L);
-        ProductDto output = new ProductDto();
-        output.setId(2L);
+        Category category = new Category();
+        Supplier supplier = new Supplier();
+        supplier.setId(2L);
 
         when(productMapper.toEntity(input)).thenReturn(entity);
-        when(productRepository.save(entity)).thenReturn(saved);
-        when(productMapper.toDto(saved)).thenReturn(output);
-        doNothing().when(productCache).clearAll();
+        when(categoryRepository.findById(1L)).thenReturn(Optional.of(category));
+        when(supplierRepository.findById(2L)).thenReturn(Optional.of(supplier));
+        when(productRepository.save(entity)).thenReturn(entity);
+        when(productMapper.toDto(entity)).thenReturn(productDto);
 
         ProductDto result = productService.createProduct(input);
 
-        assertEquals(2L, result.getId());
+        assertSame(productDto, result);
+        assertSame(category, entity.getCategory());
+        assertTrue(entity.getSuppliers().contains(supplier));
         verify(productCache).clearAll();
     }
 
     @Test
-    void updateProduct_success() {
+    void createProduct_withMissingCategory_shouldThrow() {
+        ProductDto input = new ProductDto();
+        input.setCategoryId(404L);
+
+        when(productMapper.toEntity(input)).thenReturn(new Product());
+        when(categoryRepository.findById(404L)).thenReturn(Optional.empty());
+
+        assertThrows(ResourceNotFoundException.class, () -> productService.createProduct(input));
+        verify(productRepository, never()).save(any());
+    }
+
+    @Test
+    void updateProduct_whenExists_shouldSaveAndClearCache() {
         when(productRepository.findById(1L)).thenReturn(Optional.of(product));
-        when(productRepository.save(any(Product.class))).thenReturn(product);
+        when(productRepository.save(product)).thenReturn(product);
         when(productMapper.toDto(product)).thenReturn(productDto);
-        doNothing().when(productCache).clearAll();
 
         ProductDto result = productService.updateProduct(1L, productDto);
 
-        assertNotNull(result);
+        assertSame(productDto, result);
         verify(productCache).clearAll();
     }
 
     @Test
-    void updateProduct_notFound() {
+    void updateProduct_whenNotExists_shouldThrow() {
         when(productRepository.findById(1L)).thenReturn(Optional.empty());
+
         assertThrows(ResourceNotFoundException.class, () -> productService.updateProduct(1L, productDto));
     }
 
     @Test
-    void deleteProduct_success() {
+    void deleteProduct_whenExists_shouldDeleteAndClearCache() {
         when(productRepository.existsById(1L)).thenReturn(true);
+
         productService.deleteProduct(1L);
+
         verify(productRepository).deleteById(1L);
         verify(productCache).clearAll();
     }
 
     @Test
-    void deleteProduct_notFound() {
+    void deleteProduct_whenNotExists_shouldThrow() {
         when(productRepository.existsById(1L)).thenReturn(false);
+
         assertThrows(ResourceNotFoundException.class, () -> productService.deleteProduct(1L));
     }
 
     @Test
     void searchProductsByName_shouldReturnList() {
-        when(productRepository.findByNameContainingIgnoreCaseWithDetails("test")).thenReturn(List.of(product));
+        when(productRepository.findByNameContainingIgnoreCase("test")).thenReturn(List.of(product));
         when(productMapper.toDto(product)).thenReturn(productDto);
+
         assertEquals(1, productService.searchProductsByName("test").size());
     }
 
     @Test
     void getProductsByCategory_shouldReturnList() {
-        when(productRepository.findByCategoryIdWithDetails(1L)).thenReturn(List.of(product));
+        when(productRepository.findByCategoryId(1L)).thenReturn(List.of(product));
         when(productMapper.toDto(product)).thenReturn(productDto);
+
         assertEquals(1, productService.getProductsByCategory(1L).size());
     }
 
     @Test
     void createProductWithStockNoTx_success() {
-        ProductDto dto = new ProductDto();
-        dto.setName("Test");
-        dto.setPrice(10.0);
         Warehouse warehouse = new Warehouse();
         warehouse.setId(1L);
         Product savedProduct = new Product();
         savedProduct.setId(1L);
 
-        when(productMapper.toEntity(dto)).thenReturn(product);
-        when(productRepository.save(any(Product.class))).thenReturn(savedProduct);
+        when(productMapper.toEntity(productDto)).thenReturn(product);
+        when(productRepository.save(product)).thenReturn(savedProduct);
         when(warehouseRepository.findById(1L)).thenReturn(Optional.of(warehouse));
-        when(stockRepository.save(any(Stock.class))).thenReturn(new Stock());
 
-        productService.createProductWithStockNoTx(dto, 1L, 5);
+        productService.createProductWithStockNoTx(productDto, 1L, 5);
 
         verify(stockRepository).save(any(Stock.class));
-    }
-
-    @Test
-    void createProductWithStockNoTx_warehouseNotFound_throws() {
-        when(productMapper.toEntity(any())).thenReturn(product);
-        when(productRepository.save(any())).thenReturn(product);
-        when(warehouseRepository.findById(1L)).thenReturn(Optional.empty());
-        assertThrows(IllegalArgumentException.class, () -> productService.createProductWithStockNoTx(productDto, 1L, 5));
     }
 
     @Test
     void createProductWithStockNoTx_quantityInvalid_throws() {
-        when(productMapper.toEntity(any())).thenReturn(product);
-        when(productRepository.save(any())).thenReturn(product);
+        when(productMapper.toEntity(productDto)).thenReturn(product);
+        when(productRepository.save(product)).thenReturn(product);
         when(warehouseRepository.findById(1L)).thenReturn(Optional.of(new Warehouse()));
-        assertThrows(IllegalArgumentException.class, () -> productService.createProductWithStockNoTx(productDto, 1L, 0));
+
+        assertThrows(IllegalArgumentException.class,
+                () -> productService.createProductWithStockNoTx(productDto, 1L, 0));
     }
 
     @Test
-    void createProductWithStockTx_success() {
-        when(productMapper.toEntity(any())).thenReturn(product);
-        when(productRepository.save(any())).thenReturn(product);
+    void createProductWithStockTx_quantityNull_throws() {
+        when(productMapper.toEntity(productDto)).thenReturn(product);
+        when(productRepository.save(product)).thenReturn(product);
         when(warehouseRepository.findById(1L)).thenReturn(Optional.of(new Warehouse()));
-        productService.createProductWithStockTx(productDto, 1L, 5);
-        verify(stockRepository).save(any(Stock.class));
-    }
 
-    @Test
-    void createProductWithStockTx_quantityInvalid_throws() {
-        when(productMapper.toEntity(any())).thenReturn(product);
-        when(productRepository.save(any())).thenReturn(product);
-        when(warehouseRepository.findById(1L)).thenReturn(Optional.of(new Warehouse()));
-        assertThrows(IllegalArgumentException.class, () -> productService.createProductWithStockTx(productDto, 1L, 0));
+        assertThrows(IllegalArgumentException.class,
+                () -> productService.createProductWithStockTx(productDto, 1L, null));
     }
 
     @Test
     void getProductsByCategoryAndMaxPriceCached_cacheHit() {
-        String category = "Electronics";
-        Double maxPrice = 1000.0;
-        ProductSearchKey key = new ProductSearchKey(category, maxPrice, 0, 10, "name");
+        ProductSearchKey key = new ProductSearchKey("Electronics", 1000.0, 0, 10, "name");
         Page<ProductDto> cachedPage = new PageImpl<>(List.of(productDto));
         when(productCache.get(key)).thenReturn(cachedPage);
 
-        Page<ProductDto> result = productService.getProductsByCategoryAndMaxPriceCached(category, maxPrice, 0, 10);
+        Page<ProductDto> result = productService.getProductsByCategoryAndMaxPriceCached(
+                "Electronics", 1000.0, 0, 10);
 
         assertSame(cachedPage, result);
         verify(productRepository, never()).findByCategoryAndMaxPriceWithFetch(any(), any(), any());
@@ -252,16 +271,15 @@ class ProductServiceTest {
 
     @Test
     void getProductsByCategoryAndMaxPriceCached_cacheMiss() {
-        String category = "Electronics";
-        Double maxPrice = 1000.0;
-        ProductSearchKey key = new ProductSearchKey(category, maxPrice, 0, 10, "name");
-        when(productCache.get(key)).thenReturn(null);
+        ProductSearchKey key = new ProductSearchKey("Electronics", 1000.0, 0, 10, "name");
         Page<Product> productPage = new PageImpl<>(List.of(product));
-        when(productRepository.findByCategoryAndMaxPriceWithFetch(eq(category), eq(maxPrice), any(Pageable.class)))
+        when(productCache.get(key)).thenReturn(null);
+        when(productRepository.findByCategoryAndMaxPriceWithFetch(eq("Electronics"), eq(1000.0), any(Pageable.class)))
                 .thenReturn(productPage);
         when(productMapper.toDto(product)).thenReturn(productDto);
 
-        Page<ProductDto> result = productService.getProductsByCategoryAndMaxPriceCached(category, maxPrice, 0, 10);
+        Page<ProductDto> result = productService.getProductsByCategoryAndMaxPriceCached(
+                "Electronics", 1000.0, 0, 10);
 
         assertNotNull(result);
         assertEquals(1, result.getContent().size());
@@ -269,244 +287,16 @@ class ProductServiceTest {
     }
 
     @Test
-    void getProductsByCategoryAndMaxPriceNativeCached_cacheHit() {
-        String category = "Electronics";
-        Double maxPrice = 1000.0;
-        ProductSearchKey key = new ProductSearchKey(category, maxPrice, 0, 10, "name");
-        Page<ProductDto> cachedPage = new PageImpl<>(List.of(productDto));
-        when(productCache.get(key)).thenReturn(cachedPage);
-
-        Page<ProductDto> result = productService.getProductsByCategoryAndMaxPriceNativeCached(category, maxPrice, 0, 10);
-
-        assertSame(cachedPage, result);
-    }
-
-    @Test
-    void getProductsByCategoryAndMaxPriceNativeCached_cacheMiss_nonEmpty() {
-        String category = "Electronics";
-        Double maxPrice = 1000.0;
-        ProductSearchKey key = new ProductSearchKey(category, maxPrice, 0, 10, "name");
+    void getProductsByCategoryAndMaxPriceCached_cacheMiss_empty() {
+        ProductSearchKey key = new ProductSearchKey("Electronics", 1000.0, 0, 10, "name");
         when(productCache.get(key)).thenReturn(null);
-        Page<Long> idsPage = new PageImpl<>(List.of(1L));
-        when(productRepository.findProductIdsByCategoryAndMaxPriceNative(eq(category), eq(maxPrice), any(Pageable.class)))
-                .thenReturn(idsPage);
-        when(productRepository.findAllWithDetailsByIds(List.of(1L))).thenReturn(List.of(product));
-        when(productMapper.toDto(product)).thenReturn(productDto);
+        when(productRepository.findByCategoryAndMaxPriceWithFetch(eq("Electronics"), eq(1000.0), any(Pageable.class)))
+                .thenReturn(new PageImpl<>(Collections.emptyList()));
 
-        Page<ProductDto> result = productService.getProductsByCategoryAndMaxPriceNativeCached(category, maxPrice, 0, 10);
-
-        assertNotNull(result);
-        assertEquals(1, result.getContent().size());
-        verify(productCache).put(eq(key), any(Page.class));
-    }
-
-    @Test
-    void getProductsByCategoryAndMaxPriceNativeCached_cacheMiss_empty() {
-        String category = "Electronics";
-        Double maxPrice = 1000.0;
-        ProductSearchKey key = new ProductSearchKey(category, maxPrice, 0, 10, "name");
-        when(productCache.get(key)).thenReturn(null);
-        Page<Long> emptyPage = new PageImpl<>(Collections.emptyList());
-        when(productRepository.findProductIdsByCategoryAndMaxPriceNative(eq(category), eq(maxPrice), any(Pageable.class)))
-                .thenReturn(emptyPage);
-
-        Page<ProductDto> result = productService.getProductsByCategoryAndMaxPriceNativeCached(category, maxPrice, 0, 10);
+        Page<ProductDto> result = productService.getProductsByCategoryAndMaxPriceCached(
+                "Electronics", 1000.0, 0, 10);
 
         assertTrue(result.getContent().isEmpty());
         verify(productCache).put(eq(key), any(Page.class));
-    }
-
-    @SuppressWarnings("squid:S5778")
-    @Test
-    void createProductsBatchWithTx_emptyList_throws() {
-        assertThrows(IllegalArgumentException.class, () -> productService.createProductsBatchWithTx(Collections.emptyList()));
-    }
-
-    @SuppressWarnings("squid:S5778")
-    @Test
-    void createProductsBatchWithTx_duplicateNames_throws() {
-        List<ProductDto> list = List.of(createDto("A", 10.0), createDto("A", 20.0));
-        assertThrows(IllegalArgumentException.class, () -> productService.createProductsBatchWithTx(list));
-    }
-
-    @Test
-    void createProductsBatchWithTx_nameAlreadyExists_throws() {
-        List<ProductDto> list = List.of(createDto("Existing", 10.0));
-        when(productRepository.findByName("Existing")).thenReturn(Optional.of(new Product()));
-        assertThrows(IllegalArgumentException.class, () -> productService.createProductsBatchWithTx(list));
-    }
-
-    @Test
-    void createProductsBatchWithTx_success() {
-        List<ProductDto> list = List.of(createDto("New1", 10.0), createDto("New2", 20.0));
-        when(productRepository.findByName("New1")).thenReturn(Optional.empty());
-        when(productRepository.findByName("New2")).thenReturn(Optional.empty());
-        Product entity1 = new Product();
-        Product entity2 = new Product();
-        when(productMapper.toEntity(any(ProductDto.class))).thenReturn(entity1, entity2);
-        when(productRepository.saveAll(anyList())).thenReturn(List.of(entity1, entity2));
-        when(productMapper.toDto(entity1)).thenReturn(createDto("New1", 10.0));
-        when(productMapper.toDto(entity2)).thenReturn(createDto("New2", 20.0));
-
-        List<ProductDto> result = productService.createProductsBatchWithTx(list);
-
-        assertEquals(2, result.size());
-    }
-
-    @SuppressWarnings("squid:S5778")
-    @Test
-    void createProductsBatchWithoutTx_emptyList_throws() {
-        assertThrows(IllegalArgumentException.class, () -> productService.createProductsBatchWithoutTx(Collections.emptyList()));
-    }
-
-    @SuppressWarnings("squid:S5778")
-    @Test
-    void createProductsBatchWithoutTx_duplicateInLoop_throws() {
-        ProductDto dto1 = createDto("Dup", 10.0);
-        ProductDto dto2 = createDto("Dup", 20.0);
-        List<ProductDto> input = Arrays.asList(dto1, dto2);
-
-        Product entity1 = new Product();
-        when(productMapper.toEntity(dto1)).thenReturn(entity1);
-        when(productRepository.findByName("Dup"))
-                .thenAnswer(invocation -> Optional.empty())
-                .thenAnswer(invocation -> Optional.of(new Product()));
-        when(productRepository.save(entity1)).thenReturn(entity1);
-
-        assertThrows(IllegalArgumentException.class, () -> productService.createProductsBatchWithoutTx(input));
-
-        verify(productRepository, times(1)).save(entity1);
-    }
-
-    @Test
-    void createProductsBatchWithoutTx_success() {
-        List<ProductDto> list = List.of(createDto("A", 10.0), createDto("B", 20.0));
-        when(productRepository.findByName("A")).thenReturn(Optional.empty());
-        when(productRepository.findByName("B")).thenReturn(Optional.empty());
-        Product entity1 = new Product();
-        Product entity2 = new Product();
-        when(productMapper.toEntity(any(ProductDto.class))).thenReturn(entity1, entity2);
-        when(productRepository.save(entity1)).thenReturn(entity1);
-        when(productRepository.save(entity2)).thenReturn(entity2);
-        when(productMapper.toDto(entity1)).thenReturn(createDto("A", 10.0));
-        when(productMapper.toDto(entity2)).thenReturn(createDto("B", 20.0));
-
-        List<ProductDto> result = productService.createProductsBatchWithoutTx(list);
-
-        assertEquals(2, result.size());
-    }
-
-    private ProductDto createDto(String name, double price) {
-        ProductDto dto = new ProductDto();
-        dto.setName(name);
-        dto.setPrice(price);
-        return dto;
-    }
-
-    @Test
-    void createProduct_withNonExistingCategory_throwsResourceNotFoundException() {
-        ProductDto input = new ProductDto();
-        input.setName("Test");
-        input.setPrice(100.0);
-        input.setCategoryId(999L);
-
-        when(productMapper.toEntity(input)).thenReturn(new Product());
-        when(categoryRepository.findById(999L)).thenReturn(Optional.empty());
-
-        assertThrows(ResourceNotFoundException.class, () -> productService.createProduct(input));
-    }
-
-    @Test
-    void createProduct_withValidSuppliers_setsSuppliers() {
-        ProductDto input = new ProductDto();
-        input.setName("Product with suppliers");
-        input.setPrice(200.0);
-        input.setSupplierIds(Set.of(1L, 2L));
-
-        Product entity = new Product();
-        Supplier supplier1 = new Supplier();
-        supplier1.setId(1L);
-        Supplier supplier2 = new Supplier();
-        supplier2.setId(2L);
-
-        when(productMapper.toEntity(input)).thenReturn(entity);
-        when(supplierRepository.findById(1L)).thenReturn(Optional.of(supplier1));
-        when(supplierRepository.findById(2L)).thenReturn(Optional.of(supplier2));
-        when(productRepository.save(entity)).thenReturn(entity);
-        when(productMapper.toDto(entity)).thenReturn(new ProductDto());
-
-        productService.createProduct(input);
-
-        assertThat(entity.getSuppliers()).containsExactlyInAnyOrder(supplier1, supplier2);
-        verify(productCache).clearAll();
-    }
-
-    @Test
-    void createProduct_withExistingCategory_setsCategory() {
-        ProductDto input = new ProductDto();
-        input.setName("Test");
-        input.setPrice(100.0);
-        input.setCategoryId(1L);
-
-        Product entity = new Product();
-        Category category = new Category();
-        category.setId(1L);
-
-        when(productMapper.toEntity(input)).thenReturn(entity);
-        when(categoryRepository.findById(1L)).thenReturn(Optional.of(category));
-        when(productRepository.save(any(Product.class))).thenReturn(entity);
-        when(productMapper.toDto(entity)).thenReturn(new ProductDto());
-        doNothing().when(productCache).clearAll();
-
-        productService.createProduct(input);
-
-        assertNotNull(entity.getCategory());
-        assertEquals(category, entity.getCategory());
-    }
-
-    @Test
-    void createProduct_withNonEmptySuppliers_entersIfBlock() {
-        ProductDto input = new ProductDto();
-        input.setName("Test");
-        input.setPrice(100.0);
-        input.setSupplierIds(Set.of(1L, 2L));
-
-        Product entity = new Product();
-        Supplier supplier1 = new Supplier();
-        supplier1.setId(1L);
-        Supplier supplier2 = new Supplier();
-        supplier2.setId(2L);
-
-        when(productMapper.toEntity(input)).thenReturn(entity);
-        when(supplierRepository.findById(1L)).thenReturn(Optional.of(supplier1));
-        when(supplierRepository.findById(2L)).thenReturn(Optional.of(supplier2));
-        when(productRepository.save(any(Product.class))).thenReturn(entity);
-        when(productMapper.toDto(entity)).thenReturn(new ProductDto());
-        doNothing().when(productCache).clearAll();
-
-        productService.createProduct(input);
-
-        assertNotNull(entity.getSuppliers());
-        assertEquals(2, entity.getSuppliers().size());
-        assertTrue(entity.getSuppliers().contains(supplier1));
-        assertTrue(entity.getSuppliers().contains(supplier2));
-    }
-
-    @Test
-    void createProductWithStockNoTx_quantityNull_throws() {
-        ProductDto emptyDto = new ProductDto();
-        when(productMapper.toEntity(any())).thenReturn(new Product());
-        when(productRepository.save(any())).thenReturn(new Product());
-        when(warehouseRepository.findById(1L)).thenReturn(Optional.of(new Warehouse()));
-        assertThrows(IllegalArgumentException.class, () -> productService.createProductWithStockNoTx(emptyDto, 1L, null));
-    }
-
-    @Test
-    void createProductWithStockTx_quantityNull_throws() {
-        ProductDto emptyDto = new ProductDto();
-        when(productMapper.toEntity(any())).thenReturn(new Product());
-        when(productRepository.save(any())).thenReturn(new Product());
-        when(warehouseRepository.findById(1L)).thenReturn(Optional.of(new Warehouse()));
-        assertThrows(IllegalArgumentException.class, () -> productService.createProductWithStockTx(emptyDto, 1L, null));
     }
 }
